# bevy_noisy_shapes

./: Cargo.toml
examples/: plane.rs  sphere.rs
src/: lib.rs  plane.rs  sphere.rs
